# substrate-old

./: .travis.yml  Cargo.toml  LICENSE  LICENSE.adoc  README.adoc
doc/: documentation.adoc  intro.adoc  license.adoc  testing.adoc
substrate/client/db/: Cargo.toml
substrate/network/: Cargo.toml
substrate/network-libp2p/: Cargo.toml
substrate/state-machine/: Cargo.toml
substrate/substrate/src/: lib.rs
