[lib]
name = "substrate"
path = "src/lib.rs"

[package]
name = "substrate"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
error-chain = "0.12"

[workspace]
members = [
	"substrate/bft",
	"substrate/client",
	"substrate/client/db",
	"substrate/codec",
	"substrate/environmental",
	"substrate/executor",
	"substrate/extrinsic-pool",
	"substrate/keyring",
	"substrate/misbehavior-check",
	"substrate/network",
	"substrate/primitives",
	"substrate/rpc",
	"substrate/rpc-servers",
	"substrate/runtime-io",
	"substrate/runtime-sandbox",
	"substrate/runtime-std",
	"substrate/runtime-support",
	"substrate/runtime/consensus",
	"substrate/runtime/contract",
	"substrate/runtime/council",
	"substrate/runtime/democracy",
	"substrate/runtime/executive",
	"substrate/runtime/primitives",
	"substrate/runtime/session",
	"substrate/runtime/staking",
	"substrate/runtime/system",
	"substrate/runtime/timestamp",
	"substrate/runtime/version",
	"substrate/serializer",
	"substrate/service",
	"substrate/state-db",
	"substrate/state-machine",
	"substrate/test-runtime",
	"substrate/telemetry",
	"substrate/keystore",

]
exclude = [
	"substrate/executor/wasm",
	"substrate/pwasm-alloc",
	"substrate/pwasm-libc",
	"substrate/test-runtime/wasm",
]

[profile.release]
panic = "abort"
